@@ -28,6 +28,7 @@ import games.stendhal.server.entity.Entity;
 import games.stendhal.server.entity.npc.ChatCondition;
 import games.stendhal.server.entity.npc.condition.AndCondition;
 import games.stendhal.server.entity.npc.condition.NotCondition;
+import games.stendhal.server.entity.npc.condition.OrCondition;
 import games.stendhal.server.entity.player.Player;
 
 
@@ -38,6 +39,7 @@ public class LuaConditionHelper {
 
 	private static LuaLogger logger = LuaLogger.get();
 
+	/** The singleton instance. */
 	private static LuaConditionHelper instance;
 
 
@@ -53,6 +55,13 @@ public class LuaConditionHelper {
 		}
 
 		return instance;
+	}
+
+	/**
+	 * Hidden singleton constructor.
+	 */
+	private LuaConditionHelper() {
+		// singleton
 	}
 
 	/**
@@ -102,43 +111,52 @@ public class LuaConditionHelper {
 		}
 
 		final boolean noArgs = objects == null || objects.length == 0;
+		Exception exc = new Exception("Unknown exception");
 
 		try {
 			if (noArgs) {
 				try {
-					return (ChatCondition) Class.forName(className).newInstance();
+					return (ChatCondition) Class.forName(className).getDeclaredConstructor().newInstance();
+				} catch (final InvocationTargetException e2) {
+					exc = e2;
 				} catch (final InstantiationException e2) {
-					// do nothing
+					exc = e2;
+				} catch (final NoSuchMethodException e2) {
+					exc = e2;
 				}
 			} else {
 				final Constructor<?>[] constructors = Class.forName(className).getConstructors();
 				for (final Constructor<?> con: constructors) {
 					try {
-						return (ChatCondition) con.newInstance(objects);
+						if (con.isVarArgs()) {
+							// FIXME: not working
+							return (ChatCondition) con.newInstance((Object) objects);
+						} else {
+							return (ChatCondition) con.newInstance(objects);
+						}
 					} catch (final InvocationTargetException e2) {
-						// do nothing
+						exc = e2;
 					} catch (final InstantiationException e2) {
-						// do nothing
+						exc = e2;
 					} catch (final IllegalArgumentException e2) {
-						// do nothing
+						exc = e2;
 					}
 				}
 			}
 		} catch (final ClassNotFoundException e1) {
-			logger.error(e1, e1);
+			exc = e1;
 		} catch (final IllegalAccessException e1) {
-			logger.error(e1, e1);
+			exc = e1;
 		}
 
 
-		// FIXME: should we thrown an exception here?
-
 		if (noArgs) {
-			logger.error("No default constructor for " + className);
+			logger.error("No default constructor for " + className, exc);
 		} else if (objects != null) {
-			logger.error("No constructor for " + className + " found for args: " + Arrays.toString(objects));
+			logger.error("No constructor for " + className + " found for args: "
+				+ Arrays.toString(objects), exc);
 		} else {
-			logger.error("Unknown instantiation error for " + className); // should not happen
+			logger.error("Unknown instantiation error for " + className, exc); // should not happen
 		}
 
 		return null;
@@ -152,8 +170,25 @@ public class LuaConditionHelper {
 	 * @return
 	 * 		New NotCondition instance.
 	 */
-	public NotCondition notCondition(final ChatCondition condition) {
+	public NotCondition notC(final ChatCondition condition) {
 		return new NotCondition(condition);
+	}
+
+	/**
+	 * Creates a NotCondition instance.
+	 *
+	 * @param condition
+	 * 		Condition to be checked.
+	 * @return
+	 * 		New NotCondition instance.
+	 * @deprecated
+	 *     Use {@link LuaConditionHelper.notC}.
+	 */
+	@Deprecated
+	public NotCondition notCondition(final ChatCondition condition) {
+		logger.debug("LuaConditionHelper.notCondition deprecated. Use LuaConditionHelper.notC.");
+
+		return this.notC(condition);
 	}
 
 	/**
@@ -166,25 +201,44 @@ public class LuaConditionHelper {
 	 * @return
 	 * 		New NotCondition instance.
 	 */
-	public NotCondition notCondition(final LuaValue lv) {
+	public NotCondition notC(final LuaValue lv) {
 		if (lv.istable()) {
-			return notCondition(andCondition(lv.checktable()));
+			return notC(andCondition(lv.checktable()));
 		} else if (lv.isfunction()) {
 			return new NotCondition(create((LuaFunction) lv));
 		}
 
-		return notCondition((ChatCondition) lv.touserdata(ChatCondition.class));
+		return this.notC((ChatCondition) lv.touserdata(ChatCondition.class));
 	}
 
 	/**
-	 * Helper method to create a AndCondition instance.
+	 * Helper method for creating a NotCondition instance.
+	 *
+	 * @param lv
+	 * 		Condition to be checked inside a LuaValue instance, a list of
+	 * 		conditions inside a LuaTable, or a LuaFunction that returns a
+	 * 		boolean value.
+	 * @return
+	 * 		New NotCondition instance.
+	 * @deprecated
+	 *     Use {@link LuaConditionHelper.notC}.
+	 */
+	@Deprecated
+	public NotCondition notCondition(final LuaValue lv) {
+		logger.debug("LuaConditionHelper.notCondition deprecated. Use LuaConditionHelper.notC.");
+
+		return this.notC(lv);
+	}
+
+	/**
+	 * Helper method to create an AndCondition instance.
 	 *
 	 * @param conditionList
 	 * 		LuaTable containing a list of ChatCondition instances.
 	 * @return
 	 * 		New AndCondition instance.
 	 */
-	public AndCondition andCondition(final LuaTable conditionList) {
+	public AndCondition andC(final LuaTable conditionList) {
 		final List<ChatCondition> conditions = new LinkedList<>();
 		for (final LuaValue idx: conditionList.keys()) {
 			final LuaValue value = conditionList.get(idx);
@@ -198,5 +252,62 @@ public class LuaConditionHelper {
 		}
 
 		return new AndCondition(conditions.toArray(new ChatCondition[] {}));
+	}
+
+	/**
+	 * Helper method to create an AndCondition instance.
+	 *
+	 * @param conditionList
+	 * 		LuaTable containing a list of ChatCondition instances.
+	 * @return
+	 * 		New AndCondition instance.
+	 * @deprecated
+	 *     Use {@link LuaConditionHelper.andC}.
+	 */
+	@Deprecated
+	public AndCondition andCondition(final LuaTable conditionList) {
+		logger.debug("LuaConditionHelper.andCondition deprecated. Use LuaConditionHelper.andC.");
+
+		return this.andC(conditionList);
+	}
+
+	/**
+	 * Helper method to create an OrCondition instance.
+	 *
+	 * @param conditionList
+	 *     LuaTable containing a list of conditions.
+	 * @return
+	 *     New OrCondition instance or <code>null</code> if failed.
+	 */
+	public OrCondition orC(final LuaTable conditionList) {
+		final List<ChatCondition> conditions = new LinkedList<>();
+
+		for (int idx=1; idx <= conditionList.length(); idx++) {
+			final LuaValue c = conditionList.get(idx);
+			if (c.isuserdata()) {
+				// parameter is ChatCondition instance
+				conditions.add((ChatCondition) c.checkuserdata());
+			} else if (c.isfunction()) {
+				// parameter is LuaFunction instance
+				conditions.add(create(c.checkfunction()));
+			} else {
+				// parameter is LuaTable instance
+				if (c.get(1).isstring()) {
+					// table with single condition
+					conditions.add(create(c.get(1).checkjstring(), c.get(2).checktable()));
+				} else {
+					// table with multiple conditions
+					conditions.add(andC(c.checktable()));
+				}
+			}
+		}
+
+		final int csize = conditions.size();
+		if (csize > 0) {
+			return new OrCondition(Arrays.copyOf(conditions.toArray(), csize, ChatCondition[].class));
+		}
+
+		logger.warn("failed to created OrCondition");
+		return null;
 	}
 }
